@@ -6,7 +6,7 @@ devpi-client>=2.7,<2.7.999
 devpi-server>=4.1.1,<4.1.999
 Babel>=2.1,<2.1.999
 twine>=1.8.0,<1.8.9999
-wheel>=0.24.0,<0.24.9999
+wheel>=0.29.0,<0.29.9999
 tzlocal>=1.2.0,<1.2.9999
 setuptools>=22.0,<22.0.6
 pip>=8.1.2,<8.1.999
